Changes in 5.0:
       - ranger RF implementaion replaced randomForest in default
       importance providers, bringing speed and parallel processing
       capabilities. Results should be the same, but there may be minor
       differances. Using getImp=getImpLegacyRfZ restores legacy
       behaviour. See ?getImpLegacyRf for a further discussion.
       - Names of columns in the attStats output changed to reflect the
       fact that Boruta may use arbitrary importance source.
       - Documentation fixes, better organisation of code over files.


Changes in 4.0:
       - Initial rounds were dropped from the algorithm, as they seem
       redundant after implementation of a proper p-value adjustment.
       This should provide noticeable speed-up, however the results
       may be different than in previous versions.
       - TentativeRoughFix interface changes in order to adapt to the
       change mentioned above.
       - Output of the importance source is validated, so that wrong
       values will be clearly reported.
       - Code clean-up.


Changes in 3.1:
       - Better status messages.


Changes in 3.0:
       - More importance adapters defined.
       - Fixed TentativeRoughFix() bug making this function always return
       the original Boruta object without any modification.
       - Built-in multiple-comparisons correction, which breaks
       compatibility with older version of Boruta.
       Use pValue=0.001 and mcAdj=FALSE to trigger the legacy behaviour.
       - Experimental, "forced" mode of Boruta dropped. It is equivalent
       to fixing light argument of Boruta function to TRUE, its
       previously default value.


Changes in 2.1:
       - Fixed attStats() bug making withTentative argument behave
       opposite to what it should do. (Thanks to Jitao David Zhang
       for spotting this)


Changes in 2.0:
        - Allowed to replace randomForest with other importance source.
        - Changes in output; "rand" attributes are now called