@@ -1,21 +1,19 @@
 Package: Boruta
-Title: Wrapper Algorithm for All-Relevant Feature Selection
-Version: 5.0.0
-Depends: ranger
-Suggests: mlbench, rFerns, randomForest
+Title: Wrapper Algorithm for All Relevant Feature Selection
+Version: 5.1.0
+Depends:
+    ranger
+Suggests:
+    mlbench,
+    rFerns,
+    randomForest
 Authors@R: c(person(c("Miron","Bartosz"),"Kursa",role=c("aut","cre"),
                 email="M.Kursa@icm.edu.pl"),
              person(c("Witold","Remigiusz"),"Rudnicki",role="aut"))
-Description: An all-relevant feature selection wrapper algorithm.
-        It finds relevant features by comparing original attributes'
-        importance with importance achievable at random, estimated
-        using their permuted copies.
+Description: An all relevant feature selection wrapper algorithm.
+    It finds relevant features by comparing original attributes'
+    importance with importance achievable at random, estimated
+    using their permuted copies.
 License: GPL (>= 2)
 URL: https://m2.icm.edu.pl/boruta/
-NeedsCompilation: no
-Packaged: 2015-09-13 11:53:23 UTC; mbq
-Author: Miron Bartosz Kursa [aut, cre],
-  Witold Remigiusz Rudnicki [aut]
-Maintainer: Miron Bartosz Kursa <M.Kursa@icm.edu.pl>
-Repository: CRAN
-Date/Publication: 2015-09-13 19:32:33
+RoxygenNote: 5.0.1
