@@ -1,10 +1,10 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/Boruta.R
 \name{Boruta}
 \alias{Boruta}
 \alias{Boruta.default}
 \alias{Boruta.formula}
-\title{Important attribute search using Boruta algorithm}
+\title{Feature selection with the Boruta algorithm}
 \usage{
 Boruta(x, ...)
 
@@ -54,8 +54,8 @@ Set to \code{NULL} if \code{holdHistory} was given \code{FALSE}.}
 \item{call}{the original call of the \code{Boruta} function.}
 }
 \description{
-Boruta is an all-relevant feature selection wrapper algorithm.
-It finds relevant features by comparing original attributes' importance with importance achievable at random, estimated using their permuted copies.
+Boruta is an all relevant feature selection wrapper algorithm, capable of working with any classification method that output variable importance measure (VIM); by default, Boruta uses Random Forest.
+The method performs a top-down search for relevant features by comparing original attributes' importance with importance achievable at random, estimated using their permuted copies, and progressively elliminating irrelevant featurs to stabilise that test.
 }
 \details{
 Boruta iteratively compares importances of attributes with importances of shadow attributes, created by shuffling original ones.
