@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/tools.R
 \name{TentativeRoughFix}
 \alias{TentativeRoughFix}
@@ -19,11 +19,8 @@ Such object has few additional elements:
 \item{averageOver}{Copy of \code{averageOver} parameter.}
 }
 \description{
-In some circumstances (too short Boruta run,
-unfortunate mixing of shadow attributes, tricky dataset\ldots), Boruta
-can leave some attributes Tentative. \code{TentativeRoughFix} performs a
-simplified, weaker test for judging such
-attributes.
+In some circumstances (too short Boruta run, unfortunate mixing of shadow attributes, tricky dataset\ldots), Boruta can leave some attributes Tentative.
+\code{TentativeRoughFix} performs a simplified, weaker test for judging such attributes.
 }
 \details{
 Function claims as Confirmed those attributes that
