@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/tools.R
 \name{attStats}
 \alias{attStats}
@@ -13,7 +13,7 @@ attStats(x)
 A data frame containing, for each attribute that was originally in information system, mean, median, maximal and minimal importance, number of hits normalised to number of importance source runs performed and the decision copied from \code{finalDecision}.
 }
 \description{
-attStats shows a summary of a Boruta run in an attribute-centred way.
+\code{attStats} shows a summary of a Boruta run in an attribute-centred way.
 It produces a data frame containing some importance stats as well as the number of hits that attribute scored and the decision it was given.
 }
 \note{
