@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/tools.R
 \name{plot.Boruta}
 \alias{plot.Boruta}
@@ -13,7 +13,7 @@
 
 \item{colCode}{a vector containing colour codes for attribute decisions, respectively Confirmed, Tentative, Rejected and shadow.}
 
-\item{sort}{controls weather boxplots should be ordered, or left in original order.}
+\item{sort}{controls whether boxplots should be ordered, or left in original order.}
 
 \item{whichShadow}{a logical vector controlling which shadows should be drawn; switches respectively max shadow, mean shadow and min shadow.}
 
@@ -29,7 +29,7 @@
 Invisible copy of \code{x}.
 }
 \description{
-default plot method for Boruta objects, showing boxplots of attribute importances over run.
+Default plot method for Boruta objects, showing boxplots of attribute importances over run.
 }
 \note{
 If \code{col} is given and \code{sort} is \code{TRUE}, the \code{col} will be permuted, so that its order corresponds to attribute order in \code{ImpHistory}.
