@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/tools.R
 \name{plotImpHistory}
 \alias{plotImpHistory}
@@ -31,7 +31,7 @@ plotImpHistory(x, colCode = c("green", "yellow", "red", "blue"), col = NULL,
 Invisible copy of \code{x}.
 }
 \description{
-alternative plot method for Boruta objects, showing matplot of attribute importances over run.
+Alternative plot method for Boruta objects, showing matplot of attribute importances over run.
 }
 \note{
 This function will throw an error when \code{x} lacks importance history, i.e., was made with \code{holdHistory} set to \code{FALSE}.
