@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/Boruta.R
 \name{print.Boruta}
 \alias{print.Boruta}
@@ -15,7 +15,7 @@
 Invisible copy of \code{x}.
 }
 \description{
-print method for Boruta objects.
+Print method for the Boruta objects.
 }
 \author{
 Miron B. Kursa
